[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/booster2.dae" type="PackedScene" id=1]
[ext_resource path="res://booster.gd" type="Script" id=2]
[ext_resource path="res://assets/doublesidedmetal.tres" type="Material" id=3]
[ext_resource path="res://assets/white.material" type="Material" id=4]
[ext_resource path="res://assets/flag.png" type="Texture" id=5]
[ext_resource path="res://assets/space.tres" type="Material" id=6]
[ext_resource path="res://assets/bfr_logo.tres" type="Material" id=7]
[ext_resource path="res://assets/x.tres" type="Material" id=8]

[sub_resource type="SpatialMaterial" id=1]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
flags_do_not_receive_shadows = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 1, 1, 1 )
albedo_texture = ExtResource( 5 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo", "Ambient Occlusion", "Anisotropy", "Clearcoat", "Depth", "Detail", "Distance Fade", "Emission", "Flags", "Metallic", "NormalMap", "Parameters", "Proximity Fade", "Refraction", "Resource", "Rim", "Roughness", "Subsurf Scatter", "Transmission", "Vertex Color" ]

[node name="Scene Root" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="top_dome" parent="." index="0"]
material/0 = ExtResource( 3 )
_sections_unfolded = [ "material" ]

[node name="booster_top" parent="." index="7"]
material/0 = ExtResource( 4 )
_sections_unfolded = [ "material" ]

[node name="flag1" parent="." index="8"]
material/0 = SubResource( 1 )
_sections_unfolded = [ "material" ]

[node name="space1" parent="." index="10"]
material/0 = ExtResource( 6 )
_sections_unfolded = [ "material" ]

[node name="logo1" parent="." index="12"]
material/0 = ExtResource( 7 )
_sections_unfolded = [ "material" ]

[node name="x1" parent="." index="14"]
material/0 = ExtResource( 8 )
_sections_unfolded = [ "material" ]

[node name="OmniLight" type="OmniLight" parent="." index="19"]
transform = Transform( 0.999888, -0.0149507, 0, 0.0149507, 0.999888, 0, 0, 0, 1, 20.8441, -37.7504, 0 )
visible = false
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
omni_range = 86.8062
omni_attenuation = 1.0
omni_shadow_mode = 1
omni_shadow_detail = 1
_sections_unfolded = [ "Light", "Shadow" ]

